...
                        .accessibilityAction(named: Text("Set end time to in 15 minutes"), {end = Date(timeIntervalSinceNow: 15 * 60)})
                        .accessibilityAction(named: Text("Set end time to in 1 hour"), {end = Date(timeIntervalSinceNow: 3600)})
                }
                VStack {
                    ProgressView(value: progressValue)
                        .animation(.easeInOut)
                        .accessibility(identifier: "ProgressBar")
                        .actionSheet(isPresented: $showingEventsFoundInCalendarActionSheet) {
                            ActionSheet(title: Text("Events found in calendar."), message: Text("How do you want to proceed?"), buttons: [.default(Text("Consider it/them")) {
                                considerCalendarEvents = true
                                parseFromPasteboardAndOrganize()
                            }, .cancel(Text("Ignore")) {
                                considerCalendarEvents = false
...
                        Spacer()
                    }
                    .sheet(isPresented: $showingOnboardingView) {
                        OnboardingView()
                    }
                }
                Button("Parse from clipboard/pasteboard") {
                    parseFromPasteboardAndOrganize()
                }
                .accessibility(hint: Text("Parse tasks from clipboard, organize them, and export to your calendar"))
                .onAppear {
                    checkAuthStatus(with: store)
                    showingOnboardingView = !UserDefaults().bool(forKey: UserDefaultsKeys.didShowOnboardingView)
...
